tests/ui/derive_union.stderr
error: Struple may only be derived on structs
 --> $DIR/derive_union.rs:3:10
  |
3 | #[derive(Struple)]
  |          ^^^^^^^
